add POC code for opening kdbx file stored in ProtonDrive

--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -85,7 +85,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Configuration\AccountConfiguration.cs" />
+    <Compile Include="Configuration\ConfigurationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StorageProvider\ProtonAPI.cs" />
+    <Compile Include="StorageProvider\ProtonDriveAccountForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StorageProvider\ProtonDriveStorageConfigurator.cs" />
+    <Compile Include="StorageProvider\ProtonDriveStorageProvider.cs" />
+    <Compile Include="StorageProvider\SRP.cs" />
+    <Compile Include="StorageProvider\StorageService.cs" />
+    <Compile Include="StorageProvider\Util.cs" />
+    <Compile Include="UIService.cs" />
+    <Compile Include="WebRequest\ProtonSecretsWebRequest.cs" />
+    <Compile Include="WebRequest\ProtonSecretsWebResponse.cs" />
+    <Compile Include="WebRequest\RequestStream.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -97,6 +112,11 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="StorageProvider\ProtonDriveAccountForm.resx">
+      <DependentUpon>ProtonDriveAccountForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
