add filepicker for opening DB

--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -87,6 +87,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Configuration\AccountConfiguration.cs" />
     <Compile Include="Configuration\ConfigurationService.cs" />
+    <Compile Include="Forms\ProtonDriveFilePicker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ProtonDriveFilePicker.Designer.cs">
+      <DependentUpon>ProtonDriveFilePicker.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StorageProvider\ProtonAPI.cs" />
     <Compile Include="StorageProvider\ProtonDriveAccountForm.cs">
@@ -95,6 +101,8 @@
     <Compile Include="StorageProvider\ProtonDriveStorageConfigurator.cs" />
     <Compile Include="StorageProvider\ProtonDriveStorageProvider.cs" />
     <Compile Include="StorageProvider\SRP.cs" />
+    <Compile Include="StorageProvider\ProtonDriveItem.cs" />
+    <Compile Include="StorageProvider\StorageProviderItemType.cs" />
     <Compile Include="StorageProvider\StorageService.cs" />
     <Compile Include="StorageProvider\Util.cs" />
     <Compile Include="UIService.cs" />
@@ -114,6 +122,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Forms\ProtonDriveFilePicker.resx">
+      <DependentUpon>ProtonDriveFilePicker.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StorageProvider\ProtonDriveAccountForm.resx">
       <DependentUpon>ProtonDriveAccountForm.cs</DependentUpon>
     </EmbeddedResource>
