add file filter, icons, timestamps and file sizes

--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Forms\ProtonDriveFilePicker.Designer.cs">
       <DependentUpon>ProtonDriveFilePicker.cs</DependentUpon>
     </Compile>
+    <Compile Include="KpResources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StorageProvider\ProtonAPI.cs" />
     <Compile Include="StorageProvider\ProtonDriveAccountForm.cs">
