add basic upload

--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -47,13 +47,18 @@
       <HintPath>packages\BCrypt.Net-Next.3.3.2\lib\net472\BCrypt.Net-Next.dll</HintPath>
     </Reference>
     <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
-      <HintPath>packages\BouncyCastle.Cryptography.2.0.0\lib\net461\BouncyCastle.Cryptography.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\bc-csharp\crypto\src\bin\Debug\netstandard2.0\BouncyCastle.Cryptography.dll</HintPath>
+    </Reference>
+    <Reference Include="KeePass, Version=2.52.0.17694, Culture=neutral, PublicKeyToken=fed2ed7716aecf5c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\keepass-exe\KeePass.exe</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.13.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PgpCore, Version=5.0.0.0, Culture=neutral, PublicKeyToken=e84be4b896fe5158, processorArchitecture=MSIL">
-      <HintPath>packages\PgpCore.5.9.0\lib\netstandard2.0\PgpCore.dll</HintPath>
+      <HintPath>packages\PgpCore.5.10.0\lib\netstandard2.0\PgpCore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -72,10 +77,6 @@
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="KeePass, Version=2.41.0.19744, Culture=neutral, PublicKeyToken=fed2ed7716aecf5c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\keepass-exe\KeePass.exe</HintPath>
-    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="Microsoft.CSharp" />
@@ -96,17 +97,15 @@
     <Compile Include="KpResources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StorageProvider\ProtonAPI.cs" />
-    <Compile Include="StorageProvider\ProtonDriveAccountForm.cs">
+    <Compile Include="Forms\ProtonDriveAccountForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StorageProvider\ProtonDriveStorageConfigurator.cs" />
     <Compile Include="StorageProvider\ProtonDriveStorageProvider.cs" />
     <Compile Include="StorageProvider\SRP.cs" />
     <Compile Include="StorageProvider\ProtonDriveItem.cs" />
     <Compile Include="StorageProvider\StorageProviderItemType.cs" />
     <Compile Include="StorageProvider\StorageService.cs" />
     <Compile Include="StorageProvider\Util.cs" />
-    <Compile Include="UIService.cs" />
     <Compile Include="WebRequest\ProtonSecretsWebRequest.cs" />
     <Compile Include="WebRequest\ProtonSecretsWebResponse.cs" />
     <Compile Include="WebRequest\RequestStream.cs" />
@@ -126,7 +125,7 @@
     <EmbeddedResource Include="Forms\ProtonDriveFilePicker.resx">
       <DependentUpon>ProtonDriveFilePicker.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="StorageProvider\ProtonDriveAccountForm.resx">
+    <EmbeddedResource Include="Forms\ProtonDriveAccountForm.resx">
       <DependentUpon>ProtonDriveAccountForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
