integrate upload to keepass DB save

--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -96,6 +96,7 @@
     </Compile>
     <Compile Include="KpResources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StorageProvider\Crypto.cs" />
     <Compile Include="StorageProvider\ProtonAPI.cs" />
     <Compile Include="Forms\ProtonDriveAccountForm.cs">
       <SubType>Form</SubType>
