--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -97,11 +97,13 @@
     <Compile Include="KpResources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StorageProvider\Crypto.cs" />
+    <Compile Include="StorageProvider\ProtonAddress.cs" />
     <Compile Include="StorageProvider\ProtonAPI.cs" />
     <Compile Include="Forms\ProtonDriveAccountForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StorageProvider\ProtonDriveStorageProvider.cs" />
+    <Compile Include="StorageProvider\ProtonShare.cs" />
     <Compile Include="StorageProvider\SRP.cs" />
     <Compile Include="StorageProvider\ProtonDriveItem.cs" />
     <Compile Include="StorageProvider\StorageProviderItemType.cs" />
