remove hardcoded variables + refactor

--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -103,6 +103,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StorageProvider\ProtonDriveStorageProvider.cs" />
+    <Compile Include="StorageProvider\ProtonLink.cs" />
     <Compile Include="StorageProvider\ProtonShare.cs" />
     <Compile Include="StorageProvider\SRP.cs" />
     <Compile Include="StorageProvider\ProtonDriveItem.cs" />
