--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -88,14 +88,37 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Configuration\AccountConfiguration.cs" />
     <Compile Include="Configuration\ConfigurationService.cs" />
+    <Compile Include="Forms\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ProtonDrive2FA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ProtonDrive2FA.Designer.cs">
+      <DependentUpon>ProtonDrive2FA.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ProtonDriveFilePicker.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\ProtonDriveFilePicker.Designer.cs">
       <DependentUpon>ProtonDriveFilePicker.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SignedInAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SignedInAccount.Designer.cs">
+      <DependentUpon>SignedInAccount.cs</DependentUpon>
+    </Compile>
     <Compile Include="KpResources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="StorageProvider\Crypto.cs" />
     <Compile Include="StorageProvider\ProtonAddress.cs" />
     <Compile Include="StorageProvider\ProtonAPI.cs" />
@@ -126,11 +149,24 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Forms\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ProtonDrive2FA.resx">
+      <DependentUpon>ProtonDrive2FA.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProtonDriveFilePicker.resx">
       <DependentUpon>ProtonDriveFilePicker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ProtonDriveAccountForm.resx">
       <DependentUpon>ProtonDriveAccountForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SignedInAccount.resx">
+      <DependentUpon>SignedInAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
