fix packet signature and add windows credential manager

--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -50,6 +50,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\bc-csharp\crypto\src\bin\Debug\netstandard2.0\BouncyCastle.Cryptography.dll</HintPath>
     </Reference>
+    <Reference Include="CredentialManagement, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\CredentialManagement.1.0.2\lib\net35\CredentialManagement.dll</HintPath>
+    </Reference>
     <Reference Include="KeePass, Version=2.52.0.17694, Culture=neutral, PublicKeyToken=fed2ed7716aecf5c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\keepass-exe\KeePass.exe</HintPath>
