rename entry file and add project description

--- a/ProtonSecrets.csproj
+++ b/ProtonSecrets.csproj
@@ -88,7 +88,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ProtonSecretsExt.cs" />
     <Compile Include="Configuration\AccountConfiguration.cs" />
     <Compile Include="Configuration\ConfigurationService.cs" />
     <Compile Include="Forms\ProtonDrive2FA.cs">
